--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "firebase": "^11.9.1",
     "framer-motion": "^10.16.4",
     "link": "^2.1.1",
     "lucide-react": "^0.285.0",
